--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ https://templatemo.com/tm-559-zay-shop
                                 </li>
                                 <li class="text-muted text-right">₱ 2,490.00</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">U Premium Lambswool V Neck Long Sleeve Dress</a>
+                            <a href="#" class="h2 text-decoration-none text-dark">U Premium Lambswool V Neck Long Sleeve Dress</a>
                             <p class="card-text">
                                 A distinctive chunky knit with stylish detail. Also great for layering with pants.
                             </p>
@@ -221,7 +221,7 @@ https://templatemo.com/tm-559-zay-shop
                                 </li>
                                 <li class="text-muted text-right">₱ 1,999.00</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Levi's® Men's Half Sleeve Field Ruby Shirt</a>
+                            <a href="#" class="h2 text-decoration-none text-dark">Levi's® Men's Half Sleeve Field Ruby Shirt</a>
                             <p class="card-text">
                                 Nothing like the shirts you'd find at a country club. Designed with an oversized fit, dropped shoulders and heavyweight jersey, this rugby shirt is 21st century take on a classic.
                             </p>
@@ -245,7 +245,7 @@ https://templatemo.com/tm-559-zay-shop
                                 </li>
                                 <li class="text-muted text-right">₱ 1,500.00</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Nike Therma-FIT</a>
+                            <a href="#" class="h2 text-decoration-none text-dark">Nike Therma-FIT</a>
                             <p class="card-text">
                                The Nike Therma-FIT Trousers hold in body heat and wick sweat at the same time, helping keep you warm and dry before, during and after your workout.Soft fabric (made from at least 50% recycled polyester fibres) feels comfortable against your skin.
                             </p>
