--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@ https://templatemo.com/tm-559-zay-shop
                         </li>
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel:010-020-0340">09051499186</a>
+                            <a class="text-decoration-none" href="#">09051499186</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
-                            <a class="text-decoration-none" href="mailto:info@company.com">avogue.com</a>
+                            <a class="text-decoration-none" href="#">avogue.com</a>
                         </li>
                     </ul>
                 </div>
