--- a/sign up.html
+++ b/sign up.html
@@ -4,6 +4,8 @@
   	<title>Registration form</title>
     <meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+	<link rel="apple-touch-icon" href="assets/img/Icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/Icon.png">
   </head>
 	<body class="body">
 	<section class="ftco-section">
@@ -41,6 +43,7 @@
 	          	<p class="mb-0">You have already account?</p>
 		          <a href="log in.html" style="color:#0890ff">Login</a>
 	          </div>
+	          <div class="bth"><a href="index.html">Back to Home</a></div>
 	        </div>
 				</div>
 			</div>
