--- a/log in.html
+++ b/log in.html
@@ -4,6 +4,8 @@
   	<title>Login form</title>
     <meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+	<link rel="apple-touch-icon" href="assets/img/Icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/Icon.png">
   </head>
 	<body class="body">
 	<section class="ftco-section">
